--- a/pages/users/styles/login.module.css
+++ b/pages/users/styles/login.module.css
@@ -4,9 +4,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 4px;
-    margin: 0 auto;
+    padding: 30px;
+    margin: 6px auto;
     max-height: 667px;
+    background-color: var(--background);
+    border: 2px solid var(--text-primary);
+    border-radius: 16px;
   }
   .login_container_title {
     padding: 1%;
@@ -26,13 +29,18 @@
   .login_container_title_text h1 {
     font-size: 24px;
     text-align: center;
+    border: 2px solid var(--text-primary);
+    border-radius: 16px;
+    padding: 10px;
   }
   .login_container_title_text ul {
     list-style-type: none;
-    text-align: start;
+    text-align: center;
     padding-left: 0;
+    padding: 4px;
   }
   .login_container_title_text ul li {
+    font-weight: 500;
     padding: 4px;
   }
   .login_container_title_buttons {
@@ -40,6 +48,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 2px solid var(--text-primary);
+    background-color: var(--shade-medium);
+    border-radius: 16px;
+    width: 100%;
   }
   .login_container_title_buttons_container {
     padding: 1%;
@@ -47,6 +59,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    column-gap: 14px;
   }
   .login_form_container {
     padding: 5px;
@@ -55,17 +68,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 300px;
+    width: 100%;
   }
   .login_form_container h1 {
     font-size: 24px;
     text-align: center;
+    border: 2px solid var(--text-primary);
+    border-radius: 16px;
+    width: 100%;
+    padding: 10px;
   }
   .login_form_container form {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px 10px;
+    width: 100%;
   }
   .login_form_container form div {
     display: flex;
@@ -77,6 +95,143 @@
   .login_form_container form div label {
     padding: 4px;
     font-size: 16px;
+    font-weight: bold;
+    text-align: start;
+  }
+  .login_form_container_button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 4px;
+    font-size: 16px;
+    text-align: center;
+    width: 100%;
+  }
+  .login_form_container_button button {
+    width: 100%;
+  }
+  .login_form_container form div input {
+    padding: 4px;
+    font-size: 16px;
+    text-align: start;
+    width: 100%;
+    border: 2px solid var(--text-primary);
+    border-radius: 16px;
+  }
+  .login_container_signup_container {
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    column-gap: 4px;
+    align-items: center;
+    text-align: center;
+  }
+  .login_container_signup_container h4 {
+    font-size: 1rem;
+    text-align: center;
+    padding: 4px;
+  }
+  .login_container_signup_container button {
+    font-size: 16px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 770px) {
+  .login_container {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    padding: 100px;
+    margin: 300px auto;
+    border: 2px solid var(--text-primary);
+    border-radius: 16px;
+  }
+  .login_container_title {
+    padding: 1%;
+    grid-column: 1 / 2; /* First column */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .login_container_title_text {
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .login_container_title_text h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+  .login_container_title_text ul {
+    list-style-type: none;
+    text-align: center;
+    padding-left: 0;
+    padding: 40px;
+    border: 2px solid var(--text-primary);
+    border-radius: 16px;
+    margin-top: 20px;
+  }
+  .login_container_title_text ul li {
+    font-weight: 500;
+    padding: 4px;
+  }
+  .login_container_title_buttons {
+    grid-column: 2 / 3; /* Second column */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid var(--text-primary);
+    background-color: var(--shade-medium);
+    border-radius: 16px;
+    width: 100%;
+  }
+  .login_container_title_buttons_container {
+    padding: 1%;
+    grid-column: 1 / 3; /* Span both columns */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    column-gap: 14px;
+  }
+  .login_form_container {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .login_form_container h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+  .login_form_container form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 10px;
+    width: 100%;
+  }
+  .login_form_container form div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+    width: 100%;
+  }
+  .login_form_container form div label {
+    padding: 4px;
+    font-size: 16px;
+    font-weight: bold;
     text-align: start;
   }
   .login_form_container_button {
@@ -94,6 +249,9 @@
     font-size: 16px;
     text-align: start;
     width: 100%;
+    border: 2px solid var(--text-primary);
+    border-radius: 16px;
+    width: 100%;
   }
   .login_container_signup_container {
     padding: 1%;
@@ -103,68 +261,18 @@
     column-gap: 4px;
     align-items: center;
     text-align: center;
+    grid-column: 1 / -1; /* This will take the whole row */
+    grid-row: 2; /* This will place it on the second row */
+  }
+  .login_container_signup_container h4 {
+    font-size: 1rem;
+    text-align: center;
+    padding: 4px;
   }
   .login_container_signup_container button {
     font-size: 16px;
     text-align: center;
-  }
-}
-@media screen and (min-width: 770px) {
-  .login_container {
-    padding: 20px; /* Adjusted padding for smaller screens */
-    display: flex;
-    flex-direction: row;
+    width: 100%;
     justify-content: center;
-    align-items: center;
-    border: 1px solid red;
-  }
-  .login_form_container {
-    /* padding: 20px; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid green;
-  }
-
-  .login_container form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border: 1px solid blue;
-    padding: 100px;
-    align-items: center;
-  }
-
-  .login_container form div {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border: 1px solid green;
-    padding: 20px;
-    align-items: start;
-  }
-
-  .login_container form label {
-    border: 1px solid yellow;
-    padding: 20px;
-    align-items: center;
-  }
-
-  .login_container form input {
-    border: 1px solid purple;
-    padding: 20px;
-    align-items: center;
-    font-size: 16px;
-  }
-
-  .login_container_welcome_container {
-    border: 1px solid orange;
-    padding: 20px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
   }
 }
