--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,35 @@
+:root {
+  --background: #f0f0f0; /* Light background */
+  --text-primary: #333; /* Darker text for better contrast */
+  --text-secondary: #4caf50; /* Lighter shade of green */
+  --accent: #76ff03; /* Lighter accent color */
+  --shade-dark: #a5d6a7; /* Lighter dark shade */
+  --shade-medium: #c8e6c9; /* Lighter medium shade */
+  --shade-soft: #e8f5e9; /* Very light soft shade */
+  --shade-light: #dcedc8; /* Light shade */
+}
+
+[data-theme="green"] {
+  --background: #3d9970;
+  --text-primary: #111;
+  --text-secondary: #2ecc40;
+  --accent: #01ff70;
+  --shade-dark: #808000;
+  --shade-medium: #228b22;
+  --shade-soft: #98ff98;
+  --shade-light: #32cd32;
+}
+
+.title {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.themeButtons {
+  display: flex;
+  gap: 10px;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -5,8 +37,8 @@ body {
 }
 
 body {
-  background-color: white;
-  color: black;
+  background-color: var(--background);
+  color: var(--text-primary);
   transition: background-color 0.3s, color 0.3s;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
