--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -3,7 +3,7 @@
   height: 84px;
   line-height: 80px;
   background-color: var(--background);
-  border-bottom: 1px solid var(--accent);
+  border-bottom: 1px solid var(--text-secondary);
   transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
   position: fixed; /* Changed to fixed to keep the header at the top */
   top: 0; /* Ensure it stays at the top */
@@ -19,7 +19,7 @@
   width: 100%;
   height: 84px;
   line-height: 80px;
-  box-shadow: 5px 5px 15px -5px var(--accent);
+  box-shadow: 5px 5px 15px -5px var(--text-secondary);
   transition: 0.8s;
 }
 .logo h1 {
@@ -29,7 +29,7 @@
 }
 .logo h1 span {
   cursor: pointer;
-  color: var(--accent);
+  color: var(--text-secondary);
 }
 .mobile_logo {
   display: none;
@@ -52,7 +52,7 @@
 }
 .mobile_menu i {
   font-size: 1.3rem;
-  color: var(--text-primary);
+  color: var(--text-secondary);
   cursor: pointer;
 }
 .mobile_menu {
@@ -149,7 +149,7 @@
   }
 
   .mobile_logo h1 span {
-    color: var(--accent);
+    color: var(--text-secondary);
     cursor: pointer;
   }
 }
